[package]
name = "methods"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "methods"
path = "src/lib.rs"

[dependencies]
risc0-zkvm = { version = "=2.0.2", default-features = false, features = ["std", "unstable"] }

[build-dependencies]
risc0-build = { version = "^2.1.1" }

[package.metadata.risc0]
methods = ["guest"]
