[package]
name = "proof-verifier-guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "=2.0.2", default-features = false, features = ["std", "unstable"] }
risc0-zkvm-platform = { version = "=2.0.2", features = ["rust-runtime", "export-getrandom", "sys-getenv"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
getrandom = "0.3.3"
tlsn-core = { git = "https://github.com/tlsnotary/tlsn", package = "tlsn-core", tag = "v0.1.0-alpha.9", default-features = false }
bincode = { version = "1.3", default-features = false }
#Pure Rust arithmetic backend for p256 to avoid ring issues
p256 = { version = "0.13", default-features = false,features = ["ecdsa", "arithmetic", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false }

[features]
default = ["std"]
std = [
    "risc0-zkvm/std", 
    "serde/std", 
    "p256/std", 
    "serde_json/std", 
    "hex/std",
]

